prevented nav elements from collapsing into each other

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 150px;
 }
 
 .logo-text {
@@ -39,6 +40,7 @@
     line-height: 1.43;
     color: #484848;
     text-decoration: none;
+    min-width: 100px;
     max-height: 20px;
     border-radius: 20px;
     padding: 15px;
